# pg_dbmigrator

./: Agent.md  BENCHMARK.md  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml  docker-compose.test.yml
.cargo/: config.toml
.github/actions/setup-integration/: action.yml
.github/workflows/: ci.yml  codecov.yml
crates/pg_dbmigrator/: Cargo.toml
crates/pg_dbmigrator-cli/: Cargo.toml
crates/pg_dbmigrator-cli/src/: args.rs  main.rs
crates/pg_dbmigrator/src/: config.rs  dump.rs  orchestrator.rs  preflight.rs  progress.rs  restore.rs
crates/pg_migrator/: Cargo.toml
crates/pg_migrator-cli/: Cargo.toml
crates/pg_migrator-cli/src/: args.rs  main.rs
crates/pg_migrator/src/: apply.rs  config.rs  cutover.rs  dump.rs  error.rs  lib.rs  native_apply.rs  orchestrator.rs  preflight.rs  progress.rs  replicate.rs  restore.rs  resume.rs  snapshot.rs  tls.rs
examples/benchmark/: Cargo.toml
examples/benchmark/src/: main.rs
examples/offline_migration/: Cargo.toml
examples/offline_migration/src/: main.rs
examples/online_migration/: Cargo.toml
examples/online_migration/src/: main.rs
pg_dbmigrator/: Cargo.toml
pg_dbmigrator/src/: analyze.rs  config.rs  cutover.rs  dump.rs  error.rs  lib.rs  native_apply.rs  orchestrator.rs  preflight.rs  progress.rs  restore.rs  resume.rs  sequences.rs  snapshot.rs  tls.rs  verify.rs
pg_dbmigrator/tests/: postgres_integration.rs
tests/integration/: lib.sh  run_all.sh  run_offline.sh  run_offline_analyze.sh  run_offline_resume.sh  run_offline_sigint_cancel.sh  run_offline_split_sections.sh  run_offline_verify.sh  run_online.sh  run_online_auto_pub_lifecycle.sh  run_online_cancel_resume.sh  run_online_keep_slot.sh  run_online_lag_cadence.sh  run_online_multi_resume_sustained.sh  run_online_sequence_sync.sh  run_online_sustained.sh  run_online_updates.sh  run_online_verify.sh  run_verify_mode.sh  seed.sql
