[workspace]
resolver = "2"
members = [
    "crates/pg_migrator",
    "crates/pg_migrator-cli",
    "examples/offline_migration",
    "examples/online_migration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["danielshih"]
repository = "https://example.com/pg_migrator"
description = "PostgreSQL migration tool (offline dump/restore + online logical replication)"

[workspace.dependencies]
# Core async runtime + helpers
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tokio-postgres = { version = "0.7.17", features = ["with-chrono-0_4"] }
futures = "0.3.32"

# Logging / errors / serialization
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
async-trait = "0.1.89"
url = "2.5.8"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Replication library (this workspace's sibling)
pg_walstream = { version = "0.6.3", features = ["rustls-tls"] }

# TLS for tokio-postgres
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8.3"

# Unix signal helpers (process-group SIGTERM/SIGKILL on cancel).
libc = "0.2"

# Test utilities
tempfile = "3.27"

[profile.release]
lto = "thin"
codegen-units = 1
debug = false
strip = "symbols"
