[workspace]
resolver = "2"
members = [
    "pg_dbmigrator",
    "examples/offline_migration",
    "examples/online_migration",
    "examples/benchmark",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["danielshih"]
repository = "https://github.com/isdaniel/pg_dbmigrator"
description = "PostgreSQL database migration tool (offline dump/restore + online logical replication)"
readme = "README.md"
keywords = ["postgresql", "migration", "database", "replication", "pg-dump"]
categories = ["database", "command-line-utilities"]

[workspace.dependencies]
# Core async runtime + helpers
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tokio-postgres = { version = "0.7.18", features = ["with-chrono-0_4"] }
futures = "0.3.32"

# Logging / errors / serialization
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.18"
anyhow = "1.0.103"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
async-trait = "0.1.89"
url = "2.5.8"
bytes = "1.12.0"
chrono = { version = "0.4.45", features = ["serde"] }

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Replication library (this workspace's sibling)
pg_walstream = { version = "0.7.0", features = ["rustls-tls"] }

# TLS for tokio-postgres
tokio-postgres-rustls = "0.14"
rustls = { version = "0.23.41", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8.4"

# Unix signal helpers (process-group SIGTERM/SIGKILL on cancel).
libc = "0.2.186"

# Test utilities
tempfile = "3.27"

[profile.release]
lto = "thin"
codegen-units = 1
debug = false
strip = "symbols"
