[package]
name = "pg_dbmigrator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "PostgreSQL database migration tool and library (offline dump/restore + online logical replication)"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["database", "command-line-utilities"]

[lib]
name = "pg_dbmigrator"
path = "src/lib.rs"

[[bin]]
name = "pg_dbmigrator"
path = "src/bin/pg_dbmigrator/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-postgres = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
pg_walstream = { workspace = true }
tokio-postgres-rustls = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
