[package]
name = "pg_dbmigrator-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI for the pg_dbmigrator PostgreSQL database migration library"

[[bin]]
name = "pg_dbmigrator"
path = "src/main.rs"

[dependencies]
pg_dbmigrator = { path = "../pg_dbmigrator", version = "0.1.0" }
tokio = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
