[package]
name = "benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "benchmark"
path = "src/main.rs"

[dependencies]
pg_dbmigrator = { path = "../../pg_dbmigrator" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-postgres = { workspace = true }
tokio-postgres-rustls = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
