[package]
name = "offline_migration_example"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "offline_migration_example"
path = "src/main.rs"

[dependencies]
pg_migrator = { path = "../../crates/pg_migrator" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
