[package]
name = "offline_migration_example"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "offline_migration_example"
path = "src/main.rs"

[dependencies]
pg_dbmigrator = { path = "../../crates/pg_dbmigrator" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
